Fix scrollbars missing on Firefox

--- a/pillar-web/src/styles/_project.sass
+++ b/pillar-web/src/styles/_project.sass
@@ -23,7 +23,7 @@ $list-node-children-item-width: 160px
 	align-items: stretch
 	width: 100%
 	/* So we have *some* page scroll, inside it uses perfectscrollbar */
-	min-height: 600px
+	overflow: hidden
 
 #project-nav,
 #project_context-container
